запилила эчинг, фотографии поправила

--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
 	<div id="content" >
 <h1 align=center>about</h1>	
 <p style="margin-left: 5%; margin-right: 5% ">
-&nbsp;&nbsp; Alica Khaet is Germany (Halle) based artist with russian-israeli background. Studied at Burg Giebichenstein University of Art and Design Halle, Bezalel Academy of Art and Design Jerusalem, Academy of Arts, Architecture and Design, Prague. Makes graphic Art, Illustration, animated movies. <br /><br /><img src="alica.jpg" width="700">
+&nbsp;&nbsp; Alica Khaet is Germany (Halle) based artist with russian-israeli background. Studied at Burg Giebichenstein University of Art and Design Halle, Bezalel Academy of Art and Design Jerusalem, Academy of Arts, Architecture and Design, Prague. Makes graphic Art, Illustration, animated movies. <br /><br />
+<img src="alica.jpg" width="75%">
 
 
 
