--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		 
 	<div id="content">
 	<h1 align=center>die Seite befindet sich im Umbau!</h1>
-	<p  align=center><img src="spaziergang.png" width="700"></p>
+	<p  align=center><img src="spaziergang.png" width="80%"></p>
 	</div>
 		 
 	<div id="clear">
