--- a/etching.html
+++ b/etching.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="colored.css">
 </head>
 <body style= "background:black" link="black" vlink="black" alink="gray">
-<div style="height:45vw; margin: 0 20%; background:white">
+<div style="height:50vw; margin: 0 20%; background:white">
 
 
 <div id="container">
@@ -35,7 +35,29 @@
 		 
 	<div id="content">
 	<h1 align=center>etching</h1>
-	</div>
+	
+<div id="gallery1">
+	
+  <img src="kuritza-2.jpg" alt="" tabindex="0" />
+  <img src="dvor-big.jpg" alt="" tabindex="0" />
+  <img src="ohne title.jpg" alt="" tabindex="0" />
+  <img src="ohne title2.jpg" alt="" tabindex="0" />
+  <img src="parovosik.jpg" alt="" tabindex="0" />
+  <img src="parovozik2.jpg" alt="" tabindex="0" />
+  <img src="parovozik-family.jpg" alt="" tabindex="0" />
+  <img src="prag.jpg" alt="" tabindex="0" />
+  
+  <div></div>
+</div>
+
+<div id="gallery1">
+  <img src="fenster.jpg" alt="" tabindex="0" />
+  <img src="hinterhof-fenster1-1.jpg" alt="" tabindex="0" />
+  <img src="smile1.jpg" alt="" tabindex="0" />
+  
+  <div></div>
+</div>
+</div>
 		 
 	<div id="clear">
 		 
