ну уменьшила фотку, грамматические ошибки исправила

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 		<ul class="menu" align=center>
         	<li><a href=#>work</a>
         	 <ul class="submenu">
-            	<li><a href="einZuhausefinden.html">ein Zuhausefinden</a></li>
+            	<li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
             	 <li><a href="etching.html">etching</a></li>
             	 <li><a href="colored.html">colored</a></li>
             	 <li><a href="animation.html">animation</a></li>
@@ -35,7 +35,7 @@
 		 
 	<div id="content">
 	<h1 align=center>contact</h1>
-<p align=center><img src="gmail.jpg" width="10"> &nbsp; alicekhaet@gmail.com</p>
+<p align=center><img src="gmail.jpg" width="10"> &nbsp; alicekhaet(at)gmail.com</p>
 
 <p align=center><a href="https://www.facebook.com/alisa.khaet?ref=br_tf"><img src="fb.jpg" width="10"> &nbsp; Facebook</a></p>
 
