--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 		<ul class="menu" align=center>
         	<li><a href=#>work</a>
         	 <ul class="submenu">
-            	 <li><a href="einZuhausefinden.html">ein Zuhausefinden</a></li>
+            	 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
             	 <li><a href="etching.html">etching</a></li>
             	 <li><a href="colored.html">colored</a></li>
             	 <li><a href="animation.html">animation</a></li>
@@ -37,13 +37,14 @@
 <h1 align=center>about</h1>	
 <p style="margin-left: 5%; margin-right: 5% ">
 &nbsp;&nbsp; Alica Khaet is Germany (Halle) based artist with russian-israeli background. Studied at Burg Giebichenstein University of Art and Design Halle, Bezalel Academy of Art and Design Jerusalem, Academy of Arts, Architecture and Design, Prague. Makes graphic Art, Illustration, animated movies. <br /><br />
-<img src="alica.jpg" width="75%">
+
 
 
 
 <table>
  <tr>
-  <td><h2>Alica Khaet</h2></td>
+   <td><h2>Alica Khaet</h2></td>
+   <td><img src="alica.jpg" width="25%"></td>
  </tr>
  <tr>
   <td>1988</td>
