сделала черный в галлерее, поправила body.

--- a/etching.html
+++ b/etching.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="colored.css">
 </head>
 <body style= "background:black" link="black" vlink="black" alink="gray">
-<div style="height:50vw; margin: 0 20%; background:white">
+<div style="margin: 0 20%; background:white">
 
 
 <div id="container">
