добавила цухаузе финден, поправила высоту экрана в контактах, поправила в css высоту контента

--- a/einZuhausefinden.html
+++ b/einZuhausefinden.html
@@ -2,7 +2,7 @@
 <head><title> ein Zuhausefinden </title>
 <link rel="stylesheet" href="colored.css">
 </head>
-<body style= "background:black" link="black" vlink="black" alink="gray">
+<body style= "background:black" link="black" vlink="black" alink="gray" height: 100vh;>
 <div style="margin: 0 20%; background:white">
 
 
@@ -35,6 +35,31 @@
 		 
 	<div id="content">
 	<h1 align=center>ein Zuhause finden</h1>
+	
+	<div id="gallery1">
+	
+  <img src="ein zuhause finden\exodus.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\die-last.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\gehen.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\hederlez.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\hexen.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\hozyaka.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\kover.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\kreis.jpg" alt="" tabindex="0" />
+  
+  <div></div>
+</div>
+
+<div id="gallery1">
+  <img src="ein zuhause finden\schleich-dich.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\schwere-leichte.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\sisters.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\take-me.jpg" alt="" tabindex="0" />
+  <img src="ein zuhause finden\take-me2.jpg" alt="" tabindex="0" />  
+  <img src="ein zuhause finden\vyhod.jpg" alt="" tabindex="0" />  
+  <div></div>
+</div>
+	
 	</div>
 		 
 	<div id="clear">
