--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,15 @@
 <head><title> contact </title>
 <link rel="stylesheet" href="colored.css">
 </head>
-<body style= "background:black" link="black" vlink="black" alink="gray">
-<div style="margin: 0 20%; background:white">
+<style>
+#content {
+            background: white;
+            width: auto;
+            height: 100%;
+}
+</style>
+<body style= "background:black" link="black" vlink="black" alink="gray" height= 100vh>
+<div style="margin: 0 20%; background:white" >
 
 
 <div id="container">
