поменяла надпись на главной, добавила биографию

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ Russland (2014)</td>
  </tr>
 
  <tr>
-  <td></td>
+  <td>Diplomausstellung "ein Zuhause finden", Burg2Galerie, Halle (2018)</td>
  </tr>
  <tr>
   <td></td>
