--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head><title> Alica Khaet </title>
 <link rel="stylesheet" href="colored.css">
 </head>
@@ -32,7 +32,10 @@
 	</div>
 		 
 	<div id="content">
-	<h1 align=center>die Seite befindet sich im Umbau!</h1>
+	<h2 align=center><font color="DarkCyan">Aktuelles:</font> Ausstellungseröffnung</h2>
+	<h2 align=center>"Kosmogonie: die einfache Tricks des Alltagzaubers"</h2>
+	<h3 align=center>Fr. 01.08.2019, 18.30 in der Dornrosa e. V., Karl-Liebknecht-Straße 34, 06114, Halle</h3>
+
 	<p  align=center><img src="spaziergang.png" width="80%"></p>
 	</div>
 		 
