приглашение на выставку

--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
 	</div>
 		 
 	<div id="content">
-	<h2 align=center><font color="DarkCyan">Aktuelles:</font> Ausstellungseröffnung</h2>
+	
+	<h2 align=center> <font color="DarkCyan">Aktuelles:</font></h2>
+	<h3 align=center> Herzliche Einladung zu Ausstellung "Täglich geöffnet" in Galerie Volkspark in Halle.<br>
+ Vernissage: 6. März, 18:00, Künstlergespräch am 20.3 zwischen 15 uns 16 Uhr. 
+	Zusammen mit 25 weiteren Künstlern präsentiere ich meine Arbeiten zum Thema Alltag.<br> 
+	Kuratiert von Julia Reuter in  Zusammenarbeit mit Susanne Henny Kolp.</h3>
+
+<h2 align=center><a href="https://www.facebook.com/events/2162949623771353/"><img src="fb.jpg" width="15"> &nbsp; Ausstellungseröffnung: täglich geöffnet</a><br>
+<a href="https://www.facebook.com/events/2194734963903428/"><img src="fb.jpg" width="15"> &nbsp; Gespräche zwischen Tür und Angel</a></h2>
+
+	<p  align=center><img src="Flyer.jpg" width="80%"></p>
+
+	<h2 align=center> <font color="OrangeRed">Ausstellung</font></h2>
 	<h2 align=center>"Kosmogonie: die einfache Tricks des Alltagzaubers"</h2>
 	<h3 align=center>Fr. 01.08.2019, 18.30 in der Dornrosa e. V., Karl-Liebknecht-Straße 34, 06114, Halle</h3>
 
