нормально разложила картинки по папкам, добавила 2 в этч

--- a/etching.html
+++ b/etching.html
@@ -37,23 +37,25 @@
 	<h1 align=center>etching</h1>
 	
 <div id="gallery1">
-	
-  <img src="kuritza-2.jpg" alt="" tabindex="0" />
-  <img src="dvor-big.jpg" alt="" tabindex="0" />
-  <img src="ohne title.jpg" alt="" tabindex="0" />
-  <img src="ohne title2.jpg" alt="" tabindex="0" />
-  <img src="parovosik.jpg" alt="" tabindex="0" />
-  <img src="parovozik2.jpg" alt="" tabindex="0" />
-  <img src="parovozik-family.jpg" alt="" tabindex="0" />
-  <img src="prag.jpg" alt="" tabindex="0" />
+  <img src="etching\vinyl1.jpg" alt="" tabindex="0" />
+  <img src="etching\verfangen.jpg" alt="" tabindex="0" />	
+  <img src="etching\kuritsa.jpg" alt="" tabindex="0" />
+  <img src="etching\dvor-big.jpg" alt="" tabindex="0" />
+  <img src="etching\ohne title.jpg" alt="" tabindex="0" />
+  <img src="etching\ohne title2.jpg" alt="" tabindex="0" />
+  <img src="etching\parovosik.jpg" alt="" tabindex="0" />
+  <img src="etching\parovozik2.jpg" alt="" tabindex="0" />
+  
   
   <div></div>
 </div>
 
 <div id="gallery1">
-  <img src="fenster.jpg" alt="" tabindex="0" />
-  <img src="hinterhof-fenster1-1.jpg" alt="" tabindex="0" />
-  <img src="smile1.jpg" alt="" tabindex="0" />
+  <img src="etching\parovozik-family.jpg" alt="" tabindex="0" />
+  <img src="etching\prag.jpg" alt="" tabindex="0" />
+  <img src="etching\fenster.jpg" alt="" tabindex="0" />
+  <img src="etching\hinterhof-fenster1-1.jpg" alt="" tabindex="0" />
+  <img src="etching\smile1.jpg" alt="" tabindex="0" />
   
   <div></div>
 </div>
