--- a/colored.html
+++ b/colored.html
@@ -9,7 +9,7 @@
 <div id="container">
 	<div id="header">
 	<h1 align=right><a href="index.html">< alica khaet</a> &nbsp;&nbsp;</h1>
-	</div>
+    </div>
 		 
 	<div id="navigation">
 		<table align=center>
@@ -18,7 +18,7 @@
 		<ul class="menu" align=center>
         	<li><a href=#>work</a>
         	 <ul class="submenu">
-            	 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
+                 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
             	 <li><a href="etching.html">etching</a></li>
             	 <li><a href="colored/colored.html">colored</a></li>
             	 <li><a href="animation.html">animation</a></li>
@@ -37,10 +37,10 @@
 	<h1 align=center>colored</h1>
   <div id="gallery1">
 	
-  <img src="DieTurmstadt.jpg" alt="" tabindex="0" />
-  <img src="Thais.jpg" alt="" tabindex="0" />
-  <img src="sunny day.jpg" alt="" tabindex="0" />
-  <img src="peeing as a cosmogony.png" alt="" tabindex="0" />
+  <img src="colored\DieTurmstadt.jpg" alt="" tabindex="0" />
+  <img src="colored\Thais.jpg" alt="" tabindex="0" />
+  <img src="colored\sunny day.jpg" alt="" tabindex="0" />
+  <img src="colored\peeing as a cosmogony.png" alt="" tabindex="0" />
   
   <div></div>
 </div>
