--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 	<div id="content">
 	
 	<h2 align=center> <font color="DarkCyan">Aktuelles:</font></h2>
+	
+	<p  align=center><img src="located.png" width="80%"></p>
+	<h2 align=center><a href="https://www.facebook.com/events/1243931589103373/"><img src="fb.jpg" width="15"> &nbsp; Verorten - Entorten / Located - Dislocated</a></h2>
+
 	<h3 align=center> Herzliche Einladung zu Ausstellung "Täglich geöffnet" in Galerie Volkspark in Halle.<br>
  Vernissage: 6. März, 18:00, Künstlergespräch am 20.3 zwischen 15 uns 16 Uhr. 
 	Zusammen mit 25 weiteren Künstlern präsentiere ich meine Arbeiten zum Thema Alltag.<br> 
