fresh legs, ну и плюс добавила тэг hr

--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
 		 
 	<div id="content">
 	
-	<h2 align=center> <font color="DarkCyan">Aktuelles:</font></h2>
+	<h2 align=center> <font color="DarkCyan">AKTUELLES:</font></h2>
+	<h3 align=center>  herzliche Einladung zur meine aktuelle Ausstellung: Fresh Legs 2019 Galerie Heike Arndt DK/Berlin:</h3>
+	<h2 align=center><a href="https://www.facebook.com/events/293656804917960/"><img src="fb.jpg" width="15"> &nbsp; FRESH LEGS 2019</a></h2>
+	<h2 align=center><a href="http://berlin.heike-arndt.dk/exhibitions/current-exhibition">berlin.heike-arndt.dk/exhibitions/current-exhibition</a></h2>
+	<p  align=center><img src="Fresh legs 2019 Poster A1.jpg" width="80%"></p>
 	
-	<p  align=center><img src="located.png" width="80%"></p>
+ <hr>
 	<h2 align=center><a href="https://www.facebook.com/events/1243931589103373/"><img src="fb.jpg" width="15"> &nbsp; Verorten - Entorten / Located - Dislocated</a></h2>
-
+    <p  align=center><img src="located.png" width="80%"></p>
+ <hr>
 	<h3 align=center> Herzliche Einladung zu Ausstellung "Täglich geöffnet" in Galerie Volkspark in Halle.<br>
  Vernissage: 6. März, 18:00, Künstlergespräch am 20.3 zwischen 15 uns 16 Uhr. 
 	Zusammen mit 25 weiteren Künstlern präsentiere ich meine Arbeiten zum Thema Alltag.<br> 
@@ -47,7 +52,7 @@
 <a href="https://www.facebook.com/events/2194734963903428/"><img src="fb.jpg" width="15"> &nbsp; Gespräche zwischen Tür und Angel</a></h2>
 
 	<p  align=center><img src="Flyer.jpg" width="80%"></p>
-
+ <hr>
 	<h2 align=center> <font color="OrangeRed">Ausstellung</font></h2>
 	<h2 align=center>"Kosmogonie: die einfache Tricks des Alltagzaubers"</h2>
 	<h3 align=center>Fr. 01.08.2019, 18.30 in der Dornrosa e. V., Karl-Liebknecht-Straße 34, 06114, Halle</h3>
