--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 	<div id="content">
 	
 	<h2 align=center> <font color="DarkCyan">AKTUELLES:</font></h2>
+	
+	<h3 align=center>Dieses Jahr stelle ich zum ersten Mal auf der mitteldeutschen Kunstmesse Kunst/MITTE in Magdeburg aus. Ich freue mich Dich dort zu sehen ! 
+	Zu finden bin ich im Young Artist Space, Koje Nummer 9"</h3>
+	<h2 align=center><a href="https://www.facebook.com/events/707969722980181/"><img src="fb.jpg" width="15"> &nbsp; KUNST/MITTE 2019</a></h2>
+	
+	<p  align=center><img src="kunst-mitte.jpg" width="80%"></p>
+ <hr>
 	<h3 align=center>  herzliche Einladung zur meine aktuelle Ausstellung: Fresh Legs 2019 Galerie Heike Arndt DK/Berlin:</h3>
 	<h2 align=center><a href="https://www.facebook.com/events/293656804917960/"><img src="fb.jpg" width="15"> &nbsp; FRESH LEGS 2019</a></h2>
 	<h2 align=center><a href="http://berlin.heike-arndt.dk/exhibitions/current-exhibition">berlin.heike-arndt.dk/exhibitions/current-exhibition</a></h2>
