--- a/about.html
+++ b/about.html
@@ -47,66 +47,125 @@
    <td><img src="alica.jpg" width="25%"></td>
  </tr>
  <tr>
-  <td>1988</td>
-  <td>geboren in Rostov am Don, Russland</td>
+  <th colspan="2">~</th>
+ </tr>
+ <tr>
+  <td>Seit 2018</td>
+  <td>freelance artist</td>
+ </tr>
+ <tr>
+  <td>2018</td>
+  <td>SDegree (Diploma) in Painting, Graphic Design, Graphic Design at Burg Giebichenstein Kunsthochschule 
+  Halle Diploma Supervision: Prof. Thomas Rug, Prof. Dr. Mirjam Schaub</td>
+ </tr>
+ <tr>  
+  <td>2015</td>
+  <td>Studies abroad at the AAAD, Department of Animation, with Prof. Jakub Zich (Prague, Czech Republic)</td>
+</tr>
+ <tr>
+  <td>2011-18</td>
+  <td>Studies at the Burg Giebichenstein Academy of Fine Arts in Halle, degree course Painting/Graphics, specialising in Graphics, with Prof. Thomas Rug</td>
+ </tr>
+ <tr>
+  <td>Seit 2009</td>
+  <td>Life in Germany. Birth of two children and parental leave.</td>
+ </tr>
+ <tr>
+  <td>2006-07</td>
+  <td>Studies at the Bezal'el Academy for Art and Design, Department of Animation (Jerusalem, Israel)</td>
+ </tr>
+ <tr>
+  <td>2006</td>
+  <td>Emigration to Israel</td>
  </tr>
  <tr>
   <td>2005-06</td>
-  <td>Studium an der RSUH (Russian State University for the Humanities)/Moskau/
-Fachbereich für Religionswissenschaften</td>
- </tr>
- <tr>  
-  <td>2006</td>
-  <td>Auswanderung nach Israel</td>
-</tr>
- <tr>
-  <td>Seit 2009</td>
-  <td>Leben und Familiengründung in Deutschland</td>
+  <td>Studies at the RSUH (Russian State University for the Humanities) Department of Religious Studies (Moscow, Russia)</td>
  </tr>
  <tr>
-  <td>Seit 2011</td>
-  <td>Studium an der Burg Giebichenstein Kunsthochschule Halle/Studiengang Grafik</td>
+  <td>2005</td>
+  <td>Russian general higher education entrance qualification (Moscow, Russia)</td>
  </tr>
  <tr>
-  <td>2015</td>
-
-  <td>Auslandsstudium an UMPRUM/Prag/Fachbereich für Animation</td>
+  <td>1988</td>
+  <td>Born 1988 in Rostov-on-Don (Russia)</td>
  </tr>
-</table><br /><br />
-
-<table>
- <tr>
-  <th>Außerdem diverse Solo- und Gruppenausstellungen in Deutschland, Russland und Israel
-(Auswahl):</th>
+<tr>
+  <th colspan="2">~</th>
  </tr>
- 
  <tr>
-  <td>Gruppenausstellung “Der Mensch ist ein Geheimnis”, Dostoevskij Museum, St.Petersburg,
-Russland (2014)</td>
+  <th colspan="2">Artist in residence:</th>
  </tr>
- 
  <tr>
-  <td>Soloausstellung in e.V. “Künstlerstadt Kalbe”, Deutschland (2015)</td>
+  <td>2019</td>
+  <td>International Summer-Symposium “Boundaries: thinking and overcoming”, Kloster Veßra, 
+Thüringen/ Exhibition, Hennebergisches Museum, Kloster Veßra, Thüringen</td>
+ </tr>
+ <tr>
+  <th colspan="2">~</th>
+ </tr>
+ <tr>
+  <th colspan="2">Solo shows:</th>
+ </tr>
+ <tr>
+    <td>2019</td>
+  <td>“Kleine Kosmogonie: die einfachen Tricks des Alltagzaubers”, Dornrosa e.V., Frauenzentrum   
+Weiberwirtschaft, Halle </td>
  </tr>
 
  <tr>
-  <td>Gruppenausstellung in Lyonel-Feininger-Galerie, Quedlinburg, Deutschland (2015)</td> 
+    <td>2018</td>
+  <td>“Ein Zuhause finden”, Burg2Galerie, Halle</td>
  </tr>
  
  <tr>
-  <td>Gruppenaussellung “Entdeckungen. Die Bücher der Burg”, Galerie Volkspark, Halle (2016)</td>
+   <td>2015</td>
+  <td>Galerie “Hundert Brücken”,  Künstlerstadt Kalbe e.V., Kalbe
+</td>
  </tr>
- 
- <tr>
-  <td>Gruppenausstellung und Gespräch “Land in Sicht?”, Rosa Dorn, Frauenzentrum Weiberwirtschaft, Halle (2018)</td>
- </tr>
-
- <tr>
-  <td>Diplomausstellung "ein Zuhause finden", Burg2Galerie, Halle (2018)</td>
+<tr>
+  <th colspan="2">~</th>
  </tr>
  <tr>
-  <td></td>
-  
+  <th colspan="2">Group shows (selection):</th>
+ </tr>
+ <tr>
+    <td>2019</td>
+  <td>“Parcours. Diplome der Burg”
+             “FRESH LEGS 2019”, Galerie Heike Arndt, Berlin
+ “Täglich geöffnet”, Galerie Volkspark, Halle
+</td>
+ </tr>
+  <tr>
+    <td>2018</td>
+  <td>“Land in Sicht?”, Dornrosa e.V., Frauenzentrum Weiberwirtschaft, Halle</td>
+ </tr>
+  <tr>
+    <td>2016</td>
+  <td>“Entdeckungen. Die Bücher der Burg”, Galerie Volkspark, Halle</td>
+ </tr>
+  <tr>
+    <td>2015</td>
+  <td>“Der Mensch ist ein Geheimnis”, Lyonel-Feininger-Galerie, Quedlinburg</td>
+ </tr>
+  <tr>
+    <td>2014</td>
+  <td>“Der Mensch ist ein Geheimnis”, Dostoevskij Museum, St.Petersburg, Russia</td>
+ </tr>
+ <tr>
+  <th colspan="2">~</th>
+ </tr>
+ <tr>
+  <th colspan="2">Conception, curation and exhibition participation:</th>
+ </tr>
+ <tr>
+    <td>2019</td>
+  <td>“Verorten_Entorten”/”Located_relocated” - Exhibition of international artists with 
+migration experience, Projekwohnung Krudebude e.V., Leipzig
+</td>
+ </tr>
+<tr>
+  <th colspan="2">~</th>
  </tr>
 </table>
 	</p>
