еще поправила биографию, загрузила новую картинку

--- a/colored.html
+++ b/colored.html
@@ -41,6 +41,7 @@
   <img src="colored\Thais.jpg" alt="" tabindex="0" />
   <img src="colored\sunny day.jpg" alt="" tabindex="0" />
   <img src="colored\peeing as a cosmogony.png" alt="" tabindex="0" />
+  <img src="colored\image1.jpeg" alt="" tabindex="0" />
   
   <div></div>
 </div>
