--- a/about.html
+++ b/about.html
@@ -50,13 +50,16 @@
   <th colspan="2">~</th>
  </tr>
  <tr>
-  <td>Seit 2018</td>
+  <td>Since 2018</td>
   <td>freelance artist</td>
  </tr>
  <tr>
   <td>2018</td>
-  <td>SDegree (Diploma) in Painting, Graphic Design, Graphic Design at Burg Giebichenstein Kunsthochschule 
-  Halle Diploma Supervision: Prof. Thomas Rug, Prof. Dr. Mirjam Schaub</td>
+  <td>Degree (Diploma) in Painting, Graphic Design, Graphic Design at Burg Giebichenstein Kunsthochschule </td>
+ </tr>
+  <tr> 
+  <td></td>
+ <td>Halle Diploma Supervision: Prof. Thomas Rug, Prof. Dr. Mirjam Schaub</td>
  </tr>
  <tr>  
   <td>2015</td>
@@ -64,11 +67,11 @@
 </tr>
  <tr>
   <td>2011-18</td>
-  <td>Studies at the Burg Giebichenstein Academy of Fine Arts in Halle, degree course Painting/Graphics, specialising in Graphics, with Prof. Thomas Rug</td>
+  <td>Studies at the Burg Giebichenstein University of Art and Design in Halle, Free Graphic Arts, Prof. Thomas Rug</td>
  </tr>
  <tr>
-  <td>Seit 2009</td>
-  <td>Life in Germany. Birth of two children and parental leave.</td>
+  <td>Since 2009</td>
+  <td>Living in Germany, birth of two children.</td>
  </tr>
  <tr>
   <td>2006-07</td>
@@ -131,9 +134,14 @@ Weiberwirtschaft, Halle </td>
  </tr>
  <tr>
     <td>2019</td>
-  <td>“Parcours. Diplome der Burg”
-             “FRESH LEGS 2019”, Galerie Heike Arndt, Berlin
- “Täglich geöffnet”, Galerie Volkspark, Halle
+  <td>
+		Kunst/Mitte, Messe für Zeitgenössische Kunst – YoungArtistSpace, Magdeburg<br>
+		„Täglich geöffnet“, Projektraum Boesner, Leipziger Baumwollspinnerei<br>
+		“Parcours. Diplome der Burg”<br>
+        “FRESH LEGS 2019”, Galerie Heike Arndt, Berlin<br>
+		“Verorten_Entorten”/”Located_relocated” - Exhibition of international artists with
+migration experience, Projekwohnung Krudebude e.V., Leipzig (conception and co-curation)<br>
+	    “Täglich geöffnet”, Galerie Volkspark, Halle<br>
 </td>
  </tr>
   <tr>
@@ -152,18 +160,7 @@ Weiberwirtschaft, Halle </td>
     <td>2014</td>
   <td>“Der Mensch ist ein Geheimnis”, Dostoevskij Museum, St.Petersburg, Russia</td>
  </tr>
- <tr>
-  <th colspan="2">~</th>
- </tr>
- <tr>
-  <th colspan="2">Conception, curation and exhibition participation:</th>
- </tr>
- <tr>
-    <td>2019</td>
-  <td>“Verorten_Entorten”/”Located_relocated” - Exhibition of international artists with 
-migration experience, Projekwohnung Krudebude e.V., Leipzig
-</td>
- </tr>
+
 <tr>
   <th colspan="2">~</th>
  </tr>
