импрессум, две афишки

--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,10 @@
 		 
 	<div id="content">
 	<h1 align=center>contact</h1>
+<p align=center><b>Impressum:</b></p>
+<p align=center>Alica Khaet</p>
+<p align=center>Willy-Lohmann-Str. 8</p>	
+<p align=center>06114 Halle (Saale)</p>
 <p align=center><img src="gmail.jpg" width="10"> &nbsp; alicekhaet(at)gmail.com</p>
 
 <p align=center><a href="https://www.facebook.com/alisa.khaet?ref=br_tf"><img src="fb.jpg" width="10"> &nbsp; Facebook</a></p>
