--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 	<div id="content">
 	
 	<h2 align=center> <font color="DarkCyan">AKTUELLES:</font></h2>
-	
+	<p  align=center><img src="HAL ART 2019 Werbung web 3.jpg" width="80%"></p>
+ <hr>	
+	<p  align=center><img src="hands.jpg" width="80%"></p>
+<hr>	
 	<h3 align=center>Dieses Jahr stelle ich zum ersten Mal auf der mitteldeutschen Kunstmesse Kunst/MITTE in Magdeburg aus. Ich freue mich Dich dort zu sehen ! 
 	Zu finden bin ich im Young Artist Space, Koje Nummer 9"</h3>
 	<h2 align=center><a href="https://www.facebook.com/events/707969722980181/"><img src="fb.jpg" width="15"> &nbsp; KUNST/MITTE 2019</a></h2>
