styles changing step 1

--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 ﻿<html>
 <head><title> Alica Khaet </title>
-<link rel="stylesheet" href="colored.css">
+<link rel="stylesheet" href="style.css">
 </head>
-<body style= "background:black">
-<div style="height:45vw; margin: 0 20%; background:white">
+
+<body>
 <div id="container">
+
 	<div id="header">
-	<h1 align=right>alica khaet &nbsp;&nbsp;</h1>
-	</div>
-		 
+	<h1 id="name">alica khaet</h1>
 	<div id="navigation">
-		<table align=center>
-  	 <tr>
- 	 <td>
-		<ul class="menu" align=center>
+		<ul class="menu">
         	<li><a href=#>work</a>
         	 <ul class="submenu">
             	 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
@@ -25,60 +21,16 @@
     		<li><a href="about.html">about</a></li>
    		 <li><a href="contact.html">contact</a></li>
 		</ul>
-	 </td>
- 	 </tr>  
-		</table> 
-
 	</div>
-		 
+	</div>
+	
 	<div id="content">
-	
-	<h2 align=center> <font color="DarkCyan">AKTUELLES:</font></h2>
-	<p  align=center><img src="HAL ART 2019 Werbung web 3.jpg" width="80%"></p>
- <hr>	
-	<p  align=center><img src="hands.jpg" width="80%"></p>
-<hr>	
-	<h3 align=center>Dieses Jahr stelle ich zum ersten Mal auf der mitteldeutschen Kunstmesse Kunst/MITTE in Magdeburg aus. Ich freue mich Dich dort zu sehen ! 
-	Zu finden bin ich im Young Artist Space, Koje Nummer 9"</h3>
-	<h2 align=center><a href="https://www.facebook.com/events/707969722980181/"><img src="fb.jpg" width="15"> &nbsp; KUNST/MITTE 2019</a></h2>
-	
-	<p  align=center><img src="kunst-mitte.jpg" width="80%"></p>
- <hr>
-	<h3 align=center>  herzliche Einladung zur meine aktuelle Ausstellung: Fresh Legs 2019 Galerie Heike Arndt DK/Berlin:</h3>
-	<h2 align=center><a href="https://www.facebook.com/events/293656804917960/"><img src="fb.jpg" width="15"> &nbsp; FRESH LEGS 2019</a></h2>
-	<h2 align=center><a href="http://berlin.heike-arndt.dk/exhibitions/current-exhibition">berlin.heike-arndt.dk/exhibitions/current-exhibition</a></h2>
-	<p  align=center><img src="Fresh legs 2019 Poster A1.jpg" width="80%"></p>
-	
- <hr>
-	<h2 align=center><a href="https://www.facebook.com/events/1243931589103373/"><img src="fb.jpg" width="15"> &nbsp; Verorten - Entorten / Located - Dislocated</a></h2>
-    <p  align=center><img src="located.png" width="80%"></p>
- <hr>
-	<h3 align=center> Herzliche Einladung zu Ausstellung "Täglich geöffnet" in Galerie Volkspark in Halle.<br>
- Vernissage: 6. März, 18:00, Künstlergespräch am 20.3 zwischen 15 uns 16 Uhr. 
-	Zusammen mit 25 weiteren Künstlern präsentiere ich meine Arbeiten zum Thema Alltag.<br> 
-	Kuratiert von Julia Reuter in  Zusammenarbeit mit Susanne Henny Kolp.</h3>
-
-<h2 align=center><a href="https://www.facebook.com/events/2162949623771353/"><img src="fb.jpg" width="15"> &nbsp; Ausstellungseröffnung: täglich geöffnet</a><br>
-<a href="https://www.facebook.com/events/2194734963903428/"><img src="fb.jpg" width="15"> &nbsp; Gespräche zwischen Tür und Angel</a></h2>
-
-	<p  align=center><img src="Flyer.jpg" width="80%"></p>
- <hr>
-	<h2 align=center> <font color="OrangeRed">Ausstellung</font></h2>
-	<h2 align=center>"Kosmogonie: die einfache Tricks des Alltagzaubers"</h2>
-	<h3 align=center>Fr. 01.08.2019, 18.30 in der Dornrosa e. V., Karl-Liebknecht-Straße 34, 06114, Halle</h3>
-
-	<p  align=center><img src="spaziergang.png" width="80%"></p>
+		<img src="spaziergang.png" width="80%">
 	</div>
-		 
-	<div id="clear">
-		 
-	</div>
-							   
+		 				   
 	<div id="footer">
-	<p  align=center>Halle 2018</p>
+		<p>Halle 2018</p>
 	</div>
-</div>
-
 </div>
 
 </body>
