animation styles etching

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <div id="container">
 
 	<div id="header">
-	<h1 id="name">alica khaet</h1>
+	<div id="name"><h1>alica khaet</h1></div>
 	<div id="navigation">
 		<ul class="menu">
+			<li><a href="animation.html">animation</a></li>
         	<li><a href=#>work</a>
         	 <ul class="submenu">
             	 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
             	 <li><a href="etching.html">etching</a></li>
             	 <li><a href="colored.html">colored</a></li>
-            	 <li><a href="animation.html">animation</a></li>
         	 </ul>
     		</li>
     		<li><a href="about.html">about</a></li>
@@ -25,11 +25,51 @@
 	</div>
 	
 	<div id="content">
-		<img src="spaziergang.png" width="80%">
+		<div class="subscribtion_top">
+				<h3>Feferle</h3>
+			<p>
+				2024
+			<br>
+				Animated short film</p>
+		</div>
+		<div class="content_container">
+			<iframe title="Feferle (trailer)" src="https://player.vimeo.com/video/900619722?dnt=1&amp;app_id=122963" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" class="fluidvids-item" data-fluidvids="loaded"></iframe>
+		</div>
+		<div class="subscribtion_boddom">
+			<p>
+Feferle, a whimsical and childlike being, wakes one fateful day with the unsettling knowledge that something terrible has happened. Her world shatters due to the sudden loss of her father, propelling her into a poignant exploration of her family’s history. Tasked with sorting through the old cluttered apartment, Feferle contemplates whether she can approach the history of her Jewish family through the material remains and raw facts.
+</p>
+<p>
+	Written and directed by Alica Khaet
+	<br>
+	Animated and designed by Alica Khaet
+	<br>
+	Sound by Robert Mai
+	<br>
+	Music by Hannes Lingens
+	<br>
+	Layout-design assistance: Natalia Shumskaya, Tara Guardiguata, Stepanida Vakhotina, Björn Bock
+	<br>
+	Voices by Robert Mai, Evelina Zadorna
+	<br>
+	Voice over by Alica Khaet, recorded by Conny Wolter
+	<br>
+	Photographs by Michael Bolotov
+	<br>
+	Supervision by Murat Haschu
+
+</p>
+funded by:
+
+Kunststiftung Sachsen-Anhalt
+
+Stiftung Zurückgeben
+			</p>
+		</div>	
 	</div>
 		 				   
 	<div id="footer">
-		<p>Halle 2018</p>
+		<p>Halle 2018-2025</p>
 	</div>
 </div>
 
