--- a/animation.html
+++ b/animation.html
@@ -1,54 +1,98 @@
 <html>
-<head><title> animation</title>
-<link rel="stylesheet" href="colored.css">
+<head><title> Alica Khaet </title>
+<link rel="stylesheet" href="style.css">
 </head>
-<body style= "background:black" link="black" vlink="black" alink="gray">
-<div style="margin: 0 20%; background:white">
 
-
+<body>
 <div id="container">
+
 	<div id="header">
-	<h1 align=right><a href="index.html">< alica khaet</a> &nbsp;&nbsp;</h1>
-	</div>
-		 
+	<div id="name"><h1>alica khaet</h1></div>
 	<div id="navigation">
-		<table align=center>
-  	 <tr>
- 	 <td>
-		<ul class="menu" align=center>
+		<ul class="menu">
+			<li><a href="animation.html">animation</a></li>
         	<li><a href=#>work</a>
         	 <ul class="submenu">
             	 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
             	 <li><a href="etching.html">etching</a></li>
             	 <li><a href="colored.html">colored</a></li>
-            	 <li><a href="animation.html">animation</a></li>
         	 </ul>
     		</li>
     		<li><a href="about.html">about</a></li>
    		 <li><a href="contact.html">contact</a></li>
 		</ul>
-	 </td>
- 	 </tr>  
-		</table> 
+	</div>
+	</div>
+	
+<div id="content">
+		<div class="subscribtion_top">
+				<h3>Feferle</h3>
+			<p>
+				2024
+			<br>
+				Animated short film</p>
+		</div>
+		<div class="content_container">
+			<iframe title="Feferle (trailer)" src="https://player.vimeo.com/video/900619722?dnt=1&amp;app_id=122963" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" class="fluidvids-item" data-fluidvids="loaded"></iframe>
+		</div>
+		<div class="subscribtion_boddom">
+			<p>
+			Feferle, a whimsical and childlike being, wakes one fateful day with the unsettling knowledge that something terrible has happened. Her world shatters due to the sudden loss of her father, propelling her into a poignant exploration of her family’s history. Tasked with sorting through the old cluttered apartment, Feferle contemplates whether she can approach the history of her Jewish family through the material remains and raw facts.
+			</p>
+			<p>
+				Written and directed by Alica Khaet
+				<br>
+				Animated and designed by Alica Khaet
+				<br>
+				Sound by Robert Mai
+				<br>
+				Music by Hannes Lingens
+				<br>
+				Layout-design assistance: Natalia Shumskaya, Tara Guardiguata, Stepanida Vakhotina, Björn Bock
+				<br>
+				Voices by Robert Mai, Evelina Zadorna
+				<br>
+				Voice over by Alica Khaet, recorded by Conny Wolter
+				<br>
+				Photographs by Michael Bolotov
+				<br>
+				Supervision by Murat Haschu
+				
+			</p>
+			funded by:
 
+			Kunststiftung Sachsen-Anhalt
+
+			Stiftung Zurückgeben
+						</p>
+		</div>
+		<div class="subscribtion_top">
+			<h3>Sei auf der Hut</h3>
+			<p>
+				2021
+			<br>
+				Animated short film</p>
+		</div>
+	<div class="content_container">	
+		<iframe src="https://player.vimeo.com/video/731793383?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" allow="autoplay; fullscreen; picture-in-picture; clipboard-write;" title="Sei auf der Hut"></iframe>
 	</div>
-		 
-	<div id="content">
-	<h1 align=center>animation</h1>
-	<p align=center><iframe src="https://player.vimeo.com/video/133690532" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p style="margin-left: 5%;>
-<a href="https://vimeo.com/133690532">Golem</a> from <a href="https://vimeo.com/user42065746">alica khaet</a> on <a href="https://vimeo.com">Vimeo</a>.</p></p>
+
+	<div class="subscribtion_top">
+		<h3>Golem</h3>
+		<p>
+			2015
+		<br>
+			Animated short film</p>
 	</div>
-		 
-	<div id="clear">
-		 
+
+	<div class="content_container">	
+		<iframe src="https://player.vimeo.com/video/133690532?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" allow="autoplay; fullscreen; picture-in-picture; clipboard-write;" title="Golem"></iframe>
 	</div>
-							   
+</div>	
+
 	<div id="footer">
-	<p  align=center>Halle 2018</p>
+		<p>Halle 2018-2025</p>
 	</div>
-</div>
-
 </div>
 
 </body>
