--- a/etching.html
+++ b/etching.html
@@ -1,36 +1,27 @@
 <html>
-<head><title> etching </title>
-<link rel="stylesheet" href="colored.css">
+<head><title> Alica Khaet </title>
+<link rel="stylesheet" href="style.css">
 </head>
-<body style= "background:black" link="black" vlink="black" alink="gray">
-<div style="margin: 0 20%; background:white">
 
-
+<body>
 <div id="container">
+
 	<div id="header">
-	<h1 align=right><a href="index.html">< alica khaet</a> &nbsp;&nbsp;</h1>
-	</div>
-		 
+	<div id="name"><h1>alica khaet</h1></div>
 	<div id="navigation">
-		<table align=center>
-  	 <tr>
- 	 <td>
-		<ul class="menu" align=center>
+		<ul class="menu">
+			<li><a href="animation.html">animation</a></li>
         	<li><a href=#>work</a>
         	 <ul class="submenu">
             	 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
             	 <li><a href="etching.html">etching</a></li>
             	 <li><a href="colored.html">colored</a></li>
-            	 <li><a href="animation.html">animation</a></li>
         	 </ul>
     		</li>
     		<li><a href="about.html">about</a></li>
    		 <li><a href="contact.html">contact</a></li>
 		</ul>
-	 </td>
- 	 </tr>  
-		</table> 
-
+	</div>
 	</div>
 		 
 	<div id="content">
