--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	<div id="navigation">
 		<ul class="menu">
 			<li><a href="animation.html">animation</a></li>
-        	<li><a href=#>work</a>
+        	<li><a href=#>artworks</a>
         	 <ul class="submenu">
             	 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
             	 <li><a href="etching.html">etching</a></li>
