--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
 <head><title> contact </title>
-<link rel="stylesheet" href="colored.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <style>
 #content {
@@ -15,30 +15,23 @@
 
 <div id="container">
 	<div id="header">
-	<h1 align=right><a href="index.html">< alica khaet</a> &nbsp;&nbsp;</h1>
-	</div>
-		 
-	<div id="navigation">
-		<table align=center>
-  	 <tr>
- 	 <td>
-		<ul class="menu" align=center>
-        	<li><a href=#>work</a>
-        	 <ul class="submenu">
-            	<li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
-            	 <li><a href="etching.html">etching</a></li>
-            	 <li><a href="colored.html">colored</a></li>
-            	 <li><a href="animation.html">animation</a></li>
-        	 </ul>
-    		</li>
-    		<li><a href="about.html">about</a></li>
-   		 <li><a href="contact.html">contact</a></li>
-		</ul>
-	 </td>
- 	 </tr>  
-		</table> 
-
-	</div>
+		<div id="name"><h1>alica khaet</h1></div>
+		<div id="navigation">
+			<ul class="menu">
+				<li><a href="animation.html">animation</a></li>
+				<li><a href=#>artworks</a>
+				 <ul class="submenu">
+					 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
+					 <li><a href="etching.html">etching</a></li>
+					 <li><a href="colored.html">colored</a></li>
+				 </ul>
+				</li>
+				<li><a href="about.html">about</a></li>
+				<li><a href="contact.html">contact</a></li>
+			</ul>
+		</div>
+		</div>
+		
 		 
 	<div id="content">
 	<h1 align=center>contact</h1>
