--- a/colored.html
+++ b/colored.html
@@ -2,9 +2,6 @@
 <head><title> colored </title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body style= "background:black" link="black" vlink="black" alink="gray">
-<div style="margin: 0 20%; background:white">
-
 
 <div id="container">
 	<div id="header">
@@ -27,14 +24,14 @@
 		
 		 
 	<div id="content">
-	<h1 align=center>colored</h1>
+	<h1>colored</h1>
   <div id="gallery1">
 	
-  <img src="colored\DieTurmstadt.jpg" alt="" tabindex="0" />
-  <img src="colored\Thais.jpg" alt="" tabindex="0" />
-  <img src="colored\sunny day.jpg" alt="" tabindex="0" />
-  <img src="colored\peeing as a cosmogony.png" alt="" tabindex="0" />
-  <img src="colored\image1.jpeg" alt="" tabindex="0" />
+  <img src="colored\DieTurmstadt.jpg" alt="Alica Khaet; Colored" data-full="colored\DieTurmstadt.jpg" class="preview"/>
+  <img src="colored\Thais.jpg" alt="Alica Khaet; Colored" data-full="colored\Thais.jpg" class="preview"/>
+  <img src="colored\sunny day.jpg" alt="Alica Khaet; Colored" data-full="colored\sunny day.jpg" class="preview"/>
+  <img src="colored\peeing as a cosmogony.png" alt="Alica Khaet; Colored" data-full="colored\peeing as a cosmogony.png" class="preview"/>
+  <img src="colored\image1.jpeg" alt="Alica Khaet; Colored" data-full="colored\image1.jpeg" class="preview"/>
   
   <div></div>
 </div>
