--- a/einZuhausefinden.html
+++ b/einZuhausefinden.html
@@ -1,10 +1,8 @@
 <html>
-<head><title> ein Zuhausefinden </title>
+<head>
+	<title> ein Zuhausefinden </title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body style= "background:black" link="black" vlink="black" alink="gray" height: 100vh;>
-<div style="margin: 0 20%; background:white">
-
 
 <div id="container">
 	<div id="header">
@@ -27,40 +25,31 @@
 		
 		 
 	<div id="content">
-	<h1 align=center>ein Zuhause finden</h1>
+	<h1>ein Zuhause finden</h1>
 	
-	<div id="gallery1">
-	
-  <img src="ein zuhause finden\exodus.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\die-last.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\gehen.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\hederlez.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\hexen.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\hozyaka.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\kover.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\kreis.jpg" alt="" tabindex="0" />
-  
-  <div></div>
-</div>
+	<div id="gallery">
+			
+		<img src="ein_zuhause_finden\exodus.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein_zuhause_finden\exodus.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\die-last.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein_zuhause_finden\die-last.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\gehen.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein_zuhause_finden\gehen.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\hederlez.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein_zuhause_finden\hederlez.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\hexen.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein_zuhause_finden\hexen.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\hozyaka.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein_zuhause_finden\hozyaka.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\kover.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein_zuhause_finden\kover.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\kreis.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein_zuhause_finden\kreis.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\schleich-dich.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein zuhause finden\schleich-dich.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\schwere-leichte.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein zuhause finden\schwere-leichte.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\sisters.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein zuhause finden\sisters.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\take-me.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein zuhause finden\take-me.jpg" class="preview"/>
+		<img src="ein_zuhause_finden\take-me2.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein zuhause finden\take-me2.jpg" class="preview"/>  
+		<img src="ein_zuhause_finden\vyhod.jpg" alt="Aica Khaet; ein Zuhause Finden" data-full="ein zuhause finden\vyhod.jpg" class="preview"/>  
 
-<div id="gallery1">
-  <img src="ein zuhause finden\schleich-dich.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\schwere-leichte.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\sisters.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\take-me.jpg" alt="" tabindex="0" />
-  <img src="ein zuhause finden\take-me2.jpg" alt="" tabindex="0" />  
-  <img src="ein zuhause finden\vyhod.jpg" alt="" tabindex="0" />  
-  <div></div>
 </div>
 	
 	</div>
-		 
-	<div id="clear">
-		 
-	</div>
-							   
+		 					   
 	<div id="footer">
-	<p  align=center>Halle 2018</p>
+	<p >Halle 2018</p>
 	</div>
 </div>
 
