--- a/etching.html
+++ b/etching.html
@@ -25,39 +25,27 @@
 	</div>
 		 
 	<div id="content">
-	<h1 align=center>etching</h1>
-	
-<div id="gallery1">
-  <img src="etching\vinyl1.jpg" alt="" tabindex="0" />
-  <img src="etching\verfangen.jpg" alt="" tabindex="0" />	
-  <img src="etching\kuritsa.jpg" alt="" tabindex="0" />
-  <img src="etching\dvor-big.jpg" alt="" tabindex="0" />
-  <img src="etching\ohne title.jpg" alt="" tabindex="0" />
-  <img src="etching\ohne title2.jpg" alt="" tabindex="0" />
-  <img src="etching\parovosik.jpg" alt="" tabindex="0" />
-  <img src="etching\parovozik2.jpg" alt="" tabindex="0" />
-  
-  
-  <div></div>
-</div>
+	<h1>etching</h1>
+		<div id="gallery">
+			<img src="etching\vinyl1.jpg" alt="Aica Khaet, Etching" data-full="etching\vinyl1.jpg" class="preview" />
+			<img src="etching\verfangen.jpg" alt="Aica Khaet, Etching" data-full="etching\verfangen.jpg" class="preview"/>	
+			<img src="etching\kuritsa.jpg" alt="Aica Khaet, Etching" data-full="etching\kuritsa.jpg" class="preview"/>
+			<img src="etching\dvor-big.jpg" alt="Aica Khaet, Etching" data-full="etching\dvor-big.jpg" class="preview"/>
+			<img src="etching\ohne title.jpg" alt="Aica Khaet, Etching" data-full="etching\ohne title.jpg" class="preview"/>
+			<img src="etching\ohne title2.jpg" alt="Aica Khaet, Etching" data-full="etching\ohne title2.jpg" class="preview"/>
+			<img src="etching\parovosik.jpg" alt="Aica Khaet, Etching" data-full="etching\parovosik.jpg" class="preview"/>
+			<img src="etching\parovozik2.jpg" alt="Aica Khaet, Etching" data-full="etching\parovozik2.jpg" class="preview"/>
+			<img src="etching\parovozik-family.jpg" alt="Aica Khaet, Etching" data-full="etching\parovozik-family.jpg" class="preview"/>
+			<img src="etching\prag.jpg" alt="Aica Khaet, Etching" data-full="etching\prag.jpg" class="preview"/>
+			<img src="etching\fenster.jpg" alt="Aica Khaet, Etching" data-full="etching\fenster.jpg" class="preview"/>
+			<img src="etching\hinterhof-fenster1-1.jpg" alt="Aica Khaet, Etching" data-full="etching\hinterhof-fenster1-1.jpg" class="preview"/>
+			<img src="etching\smile1.jpg" alt="Aica Khaet, Etching" data-full="etching\smile1.jpg" class="preview"/>
+		</div>
+		</div>
 
-<div id="gallery1">
-  <img src="etching\parovozik-family.jpg" alt="" tabindex="0" />
-  <img src="etching\prag.jpg" alt="" tabindex="0" />
-  <img src="etching\fenster.jpg" alt="" tabindex="0" />
-  <img src="etching\hinterhof-fenster1-1.jpg" alt="" tabindex="0" />
-  <img src="etching\smile1.jpg" alt="" tabindex="0" />
-  
-  <div></div>
-</div>
-</div>
-		 
-	<div id="clear">
-		 
-	</div>
 							   
 	<div id="footer">
-	<p  align=center>Halle 2018</p>
+	<p>Halle 2018</p>
 	</div>
 </div>
 
