--- a/etching.html
+++ b/etching.html
@@ -7,7 +7,7 @@
 <div id="container">
 
 	<div id="header">
-	<div id="name"><h1>alica khaet</h1></div>
+		<div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div>
 	<div id="navigation">
 		<ul class="menu">
 			<li><a href="animation.html">animation</a></li>
@@ -42,14 +42,22 @@
 			<img src="etching\smile1.jpg" alt="Aica Khaet, Etching" data-full="etching\smile1.jpg" class="preview"/>
 		</div>
 		</div>
+	
 
+	  <!-- Модальное окно -->
+	  <div id="modal" class="modal hidden">
+		<div class="modal-content">
+		  <span class="close">&times;</span>
+		  <img id="modal-image" src="" alt="Full-size image">
+		  <button id="prev">❮</button>
+		  <button id="next">❯</button>
+		</div>
+	  </div>
 							   
 	<div id="footer">
-	<p>Halle 2018</p>
+	<p>Halle 2018-2025</p>
 	</div>
 </div>
-
-</div>
-
+<script src="script.js"></script>
 </body>
 </html>
