--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div id="container">
 
 	<div id="header">
-	<div id="name"><h1>alica khaet</h1></div>
+	<div id="name"><h1>Alica Khaet</h1></div>
 	<div id="navigation">
 		<ul class="menu">
 			<li><a href="animation.html">animation</a></li>
@@ -68,9 +68,9 @@ Stiftung Zurückgeben
 	</div>
 		 				   
 	<div id="footer">
-		<p>Halle 2018-2025</p>
+		<p id="currientYear"></p>
 	</div>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
