--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <div id="container">
 
 	<div id="header">
-	<div id="name"><h1>alica khaet</h1></div>
+    <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div>
 	<div id="navigation">
 		<ul class="menu">
 			<li><a href="animation.html">animation</a></li>
@@ -161,11 +161,10 @@
     </div>
 							   
     <div id="footer">
-      <p>Halle 2018-2025</p>
+      <p id="currientYear"></p>
     </div>
 </div>
 
-</div>
-
+<script src="script.js"></script>
 </body>
 </html>
