--- a/colored.html
+++ b/colored.html
@@ -3,9 +3,10 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
+<body>
 <div id="container">
 	<div id="header">
-		<div id="name"><h1>alica khaet</h1></div>
+		<div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div>
 		<div id="navigation">
 			<ul class="menu">
 				<li><a href="animation.html">animation</a></li>
@@ -27,26 +28,30 @@
 	<h1>colored</h1>
   <div id="gallery1">
 	
-  <img src="colored\DieTurmstadt.jpg" alt="Alica Khaet; Colored" data-full="colored\DieTurmstadt.jpg" class="preview"/>
-  <img src="colored\Thais.jpg" alt="Alica Khaet; Colored" data-full="colored\Thais.jpg" class="preview"/>
-  <img src="colored\sunny day.jpg" alt="Alica Khaet; Colored" data-full="colored\sunny day.jpg" class="preview"/>
-  <img src="colored\peeing as a cosmogony.png" alt="Alica Khaet; Colored" data-full="colored\peeing as a cosmogony.png" class="preview"/>
-  <img src="colored\image1.jpeg" alt="Alica Khaet; Colored" data-full="colored\image1.jpeg" class="preview"/>
-  
+		<img src="colored\DieTurmstadt.jpg" alt="Alica Khaet; Colored" data-full="colored\DieTurmstadt.jpg" class="preview"/>
+		<img src="colored\Thais.jpg" alt="Alica Khaet; Colored" data-full="colored\Thais.jpg" class="preview"/>
+		<img src="colored\sunny day.jpg" alt="Alica Khaet; Colored" data-full="colored\sunny day.jpg" class="preview"/>
+		<img src="colored\peeing as a cosmogony.png" alt="Alica Khaet; Colored" data-full="colored\peeing as a cosmogony.png" class="preview"/>
+		<img src="colored\image1.jpeg" alt="Alica Khaet; Colored" data-full="colored\image1.jpeg" class="preview"/>
+		
   <div></div>
 </div>
 	</div>
 		 
-	<div id="clear">
-		 
+		  <!-- Модальное окно -->
+		  <div id="modal" class="modal hidden">
+			<div class="modal-content">
+			  <span class="close">&times;</span>
+			  <img id="modal-image" src="" alt="Full-size image">
+			  <button id="prev">❮</button>
+			  <button id="next">❯</button>
+			</div>
+		  </div>
+								   
+		  <div id="footer">
+			<p id="currientYear"></p>
+		</div>
 	</div>
-							   
-	<div id="footer">
-	<p  align=center>Halle 2018</p>
-	</div>
-</div>
-
-</div>
-
-</body>
-</html>
+	<script src="script.js"></script>
+	</body>
+	</html>
